


==== 可以通过BlueXP添加新存储分段并管理现有存储分段

您可以在BlueXP Canvs上查看Google Cloud Storage存储分段已有很长一段时间了。现在、您可以直接从BlueXP添加新存储分段并更改现有存储分段的属性。 https://docs.netapp.com/us-en/bluexp-google-cloud-storage/task-add-gcp-bucket.html["了解如何添加新的Google Cloud存储分段"^]。



== Kubernetes

2024年8月7日、不再支持发现和管理Kubbernetes集群。



== 迁移报告

BlueXP  迁移报告服务已于2024年8月7日删除。



== 内部 ONTAP 集群



=== 2024年10月7日



==== 支持ASA R2系统

现在、您可以在BlueXP  中发现NetApp ASA R2系统。发现NetApp ASA R2系统并打开工作环境后、您将直接转到System Manager。

ASA R2系统没有其他可用的管理选项。您不能使用标准视图、也不能启用BlueXP服务。

https://docs.netapp.com/us-en/asa-r2/index.html["详细了解ASA R2系统"^]



=== 2024年4月22日



==== 不再支持卷模板

您无法再使用模板创建卷。此操作与BlueXP修复服务关联、此服务不再可用。



=== 2023年7月30日



==== 创建 FlexGroup 卷

如果您要使用Connector管理集群、现在可以使用BlueXP API创建FlexGroup卷。

* https://docs.netapp.com/us-en/bluexp-automation/cm/wf_onprem_flexgroup_ontap_create_vol.html["了解如何创建FlexGroup卷"^]
* https://docs.netapp.com/us-en/ontap/flexgroup/definition-concept.html["了解什么是FlexGroup卷"^]




=== 2023年7月2日



==== 从我的资产中发现集群

现在、您可以通过*画布>我的资产*发现内部ONTAP集群、方法是根据与您的BlueXP登录电子邮件地址关联的ONTAP集群选择BlueXP预先发现的集群。

https://docs.netapp.com/us-en/bluexp-ontap-onprem/task-discovering-ontap.html#add-a-pre-discovered-cluster["从我的资产页面了解如何发现集群"]。



== 运营故障恢复能力



=== 2023年4月2日

通过使用新的BlueXP操作故障恢复能力服务及其自动化IT操作风险修复建议、您可以在发生中断或故障之前实施建议的修复措施。

运营故障恢复能力是一项服务、可帮助您分析警报和事件、以保持服务和解决方案的运行状况、正常运行时间和性能。

link:https://docs.netapp.com/us-en/bluexp-operational-resiliency/get-started/intro.html["详细了解BlueXP操作故障恢复能力"]。



== 勒索软件保护



=== 2024年9月30日

此版本的BlueXP  勒索软件保护包括以下更新。

* *自定义文件共享工作负载分组*：在此版本中、您现在可以将文件共享分组为组、以便更轻松地保护数据资产。该服务可以同时保护组中的所有卷。以前、您需要单独保护每个卷。https://docs.netapp.com/us-en/bluexp-ransomware-protection/rp-use-protect.html["详细了解如何在勒索软件保护策略中对文件共享工作负载进行分组"](英文)




=== 2024年9月2日

此版本的BlueXP  勒索软件保护包括以下更新。
