@@ -723,7 +723,6 @@
   <block id="6a9f822bb587b015bf3224364464cbed" category="section-title">支持服务</block>
   <block id="65077e068c20e8afeca74c12711e893e" category="paragraph">现在、NetApp SupportEdge Basic服务产品包括SupportEdge Advisor和SupportEdge Expert中提供的所有数字顾问功能、但完整堆栈拓扑(Full-Stack Topology、VMware)除外、即使启用了该功能、也无法显示VMware完整堆栈监控。</block>
   <block id="1e095c69621645fccc8f12cd7f35f6fc" category="section-title">支持ASA R2系统</block>
-  <block id="effcb34ce55a7b0374e99feabbc3c970" category="paragraph">现在、您可以在BlueXP  中发现NetApp ASA R2系统。发现NetApp ASA R2系统并打开工作环境后、您将直接转到System Manager。</block>
   <block id="d5861f4539296095cd7c9fdfd0c5a2c9" category="paragraph">ASA R2系统没有其他可用的管理选项。您不能使用标准视图、也不能启用BlueXP服务。</block>
   <block id="989977a18a476a92018e04dd60ec37c1" category="inline-link">详细了解ASA R2系统</block>
   <block id="a7c7539e11570decc041c60258667032" category="paragraph"><block ref="a7c7539e11570decc041c60258667032" category="inline-link-rx"></block></block>
@@ -757,4 +756,8 @@
   <block id="b7f7cb3b83ae19c923f62035dd4305fd" category="paragraph">详细了解<block ref="cea7a7dae9f7d88b97fa434e79201c9b" category="inline-link-rx"></block>。</block>
   <block id="7062dd46798946172bc9078744756dfc" category="section-title">提高了扫描性能</block>
   <block id="8455b67ff73ad2f75c922d81e0449780" category="paragraph">此版本可提高扫描性能。</block>
+  <block id="d26c29507d869d48f4861c9b4bae1f6e" category="paragraph">现在、如果在标准模式或专用模式下使用BlueXP 、则可以在BlueXP  中发现NetApp ASA R2系统。发现NetApp ASA R2系统并打开工作环境后、您将直接转到System Manager。</block>
+  <block id="f2fba5567ec0d8ae5addf04c960ba6d0" category="paragraph">在专用模式下使用BlueXP  时、不支持发现ASA R2系统。</block>
+  <block id="62bd7572081df25dd3f1f52151883c4a" category="inline-link">了解BlueXP部署模式</block>
+  <block id="d3342e15149bfef7fd9289d7025e506e" category="list-text"><block ref="d3342e15149bfef7fd9289d7025e506e" category="inline-link-rx"></block></block>
 </blocks>
